@@ -43,6 +43,9 @@ https://github.com/elastic/beats/compare/v1.1.0...master[Check the HEAD diff]
 ==== Added
 
 *Affecting all Beats*
+- Update builds to Golang version 1.5.2
+- Make logstash output compression level configurable. {pull}630[630]
+- Add ability to override configuration settings using environment variables {issue}114[114]
 
 *Packetbeat*
 
